force-app/main/default/objects/Court_Name__c/Court_Name__c.object-meta.xml
<CustomObject>
    <label>Court Name</label>
    <nameField>
        <label>District/Circuit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Court Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>