force-app/main/default/objects/Court_Name__c/fields/District_Circuit__c.field-meta.xml
<CustomField>
    <fullName>District_Circuit__c</fullName>
    <label>District/Circuit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>District</fullName>
            </value>
            <value>
                <fullName>Circuit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>