force-app/main/default/objects/Court_Name__c/fields/Federal_State__c.field-meta.xml
<CustomField>
    <fullName>Federal_State__c</fullName>
    <inlineHelpText>Federal, State or Local</inlineHelpText>
    <label>Federal/State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>