force-app/main/default/objects/Court_Name__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Federal_State__c</columns>
    <columns>District_Circuit__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>contains</operation>
        <value>columbia</value>
    </filters>
    <label>All</label>
</ListView>